--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-chat-widget": "^2.1.5",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "recharts": "^1.7.1"
   }
 }
