--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.9.0",
