--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pylint-django = "*"
 [packages]
 django = "*"
 djangorestframework = "*"
+pandas = "*"
+nltk = "*"
 
 [requires]
 python_version = "3.7"
