--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.9.0",
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
     "recharts": "^1.7.1"
   }
 }
