--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "recharts": "^1.7.1"
+    "recharts": "^1.7.1",
+    "regenerator-runtime": "^0.13.3"
   }
 }
